syntax = "proto3";

package greet;

option go_package = "grpc-go-project/greet/proto";

message GreetRequest{
  string first_name = 1;
}

message GreetResp{
  string result = 1;
}

service GreetService{
  rpc Greet (GreetRequest) returns(GreetResp);
  rpc GreetManyTimes(GreetRequest) returns(stream GreetResp);
}